# fs-change-notifier

./: .gitignore  Cargo.toml  LICENSE  README.md
.depl/: config.yaml
src/: lib.rs
