[package]
name = "fs-change-notifier"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Simple library to watch file changes inside given directory"
repository = "https://github.com/markcda/fs-change-notifier"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]

[dependencies]
anyhow = "1.0"
notify = "8.0"
tokio = { version = "1", features = ["sync", "time"] }
